syntax = "proto3";

package graphd;

// ─── Values (used by journal + snapshot on-disk format) ───

message NullValue {}

message InternalId {
  uint64 table = 1;
  uint64 offset = 2;
}

message GraphValue {
  oneof value {
    NullValue null_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double float_value = 4;
    string string_value = 5;
    ListValue list_value = 6;
    MapValue map_value = 7;
    NodeValue node_value = 8;
    RelValue rel_value = 9;
    PathValue path_value = 10;
    UnionValue union_value = 11;
  }
}

message ListValue {
  repeated GraphValue values = 1;
}

message MapEntry {
  string key = 1;
  GraphValue value = 2;
}

message MapValue {
  repeated MapEntry entries = 1;
}

message NodeValue {
  InternalId id = 1;
  string label = 2;
  repeated MapEntry properties = 3;
}

message RelValue {
  InternalId id = 1;
  string label = 2;
  InternalId src = 3;
  InternalId dst = 4;
  repeated MapEntry properties = 5;
}

message PathValue {
  repeated GraphValue nodes = 1;
  repeated GraphValue rels = 2;
}

message UnionValue {
  string tag = 1;
  GraphValue value = 2;
}

// ─── Row ───

message Row {
  repeated GraphValue values = 1;
}

// ─── Journal ───

message JournalEntry {
  uint64 sequence = 1;
  string query = 2;
  repeated MapEntry params = 3;
  int64 timestamp_ms = 4;
}

message SnapshotMeta {
  uint64 sequence = 1;
  bytes chain_hash = 2;
  int64 timestamp_ms = 3;
  string version = 4;
}
